[workspace]
members = [
  "shared",
  "2017/day1",
  "2017/day2",
  "2017/day3",
  "2017/day4",
  "2017/day5",
  "2017/day6",
  "2017/day7",
  "2017/day8",
  "2017/day9",
  "2017/day10",
  "2017/day11",
  "2017/day12",

  "2023/day1",
  "2023/day2",
  "2023/day3",
  "2023/day4",
  "2023/day5",
  "2023/day6",
  "2023/day7",
  "2023/day8",
  "2023/day9",
  "2023/day10",
  "2023/day11",
  "2023/day12",
  "2023/day13",
  "2023/day14",
  "2023/day15",
]
